--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <div class="he-view">
               <div class="bg a0" data-animate="fadeIn">
                 <h3 class="a1" data-animate="fadeInDown">Budget App</h3>
-                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_09.jpg" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
-                <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i></a>
+                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_09.jpg"  class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
+                <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i><</a>
                </div><!-- he bg -->
             </div><!-- he view -->
           </div><!-- he wrap -->
