--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <div class="bg a0" data-animate="fadeIn">
                 <h3 class="a1" data-animate="fadeInDown">Budget App</h3>
                 <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_09.jpg"  class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
-                <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i><</a>
+                <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i></a>
                </div><!-- he bg -->
             </div><!-- he view -->
           </div><!-- he wrap -->
@@ -206,62 +206,17 @@
     </div><!--/.container-->
     </div><!--/.G-->
 
-  <div id="sep">
-    <section id="contact" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-
-                <!-- Form -->
-  <form name="sentMessage" id="contactForm" novalidate class="wow fadeInUp" data-wow-delay="0.4s">
-
-  <div class="row">
-      <div class="col-md-5">
-          <div class="control-group">
-              <div class="controls">
-                  <input type="text" class="form-control input-lg" placeholder="Your Name" id="name" required data-validation-required-message="Please enter your name" />
-                  <p class="help-block"></p>
-              </div>
+    <div id="sep">
+      <div class="container">
+        <div class="row centered">
+          <div class="col-md-8 col-md-offset-2">
+            <h3><strong>Winnie Lau. Developer & Designer. NY & NJ</strong></h3><br/>
+              <a href="https://www.linkedin.com/in/winniemlau" target="_blank" class="btn btn-conf btn-clear"><i class="fa fa-linkedin fa-fw" id="linkedin"></i> <span class="network-name">Linkedin</span></a>
+              <a href="https://github.com/winniemlau" target="_blank" class="btn btn-conf btn-clear"><i class="fa fa-github fa-fw" id="github""></i> <span class="network-name">Github</span></a>
+              <a href="mailto:hello@winniemlau.com" target="_blank" class="btn btn-conf btn-clear"><i class="fa fa-envelope fa-fw" id="email"></i> <span class="network-name">Email</span></a>
           </div>
-          <div class="control-group">
-              <div class="controls">
-                  <input type="email" class="form-control input-lg" placeholder="Your Email" id="email" required data-validation-required-message="Please enter your email" />
-                  <p class="help-block"></p>
-              </div>
-          </div>
-          <div class="control-group">
-              <div class="controls">
-                  <input type="text" class="form-control input-lg" placeholder="6+1=" id="captcha" required pattern="7" data-validation-required-message="Please prove you're not a robot" />
-                  <p class="help-block"></p>
-              </div>
-          </div>
-      </div>
-      <div class="col-md-7">
-          <div class="control-group">
-            <div class="controls">
-             <textarea rows="6" cols="100" class="form-control input-lg" placeholder="Your Message" id="message" required data-validation-required-message="Please enter your message" minlength="5" data-validation-minlength-message="Min 5 characters" maxlength="999" style="resize:none"></textarea>
-           </div>
-         </div>
-      </div>
-  </div><br>
-  <div class="row">
-      <div class="col-md-12">
-          <div id="success"> </div> <!-- For success/fail messages -->
-          <button type="submit" class="btn btn-default btn-lg pull-right">
-             <i class="fa fa-paper-plane"></i> Send
-          </button>
-      </div>
-  </div>
-
-  </form>
-  <!-- /Form -->
-
-
-                <!-- <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-                </p> -->
-
-            </div>
-        </div>
-    </section>
+        </div><!--/row-->
+      </div><!--/container-->
     </div><!--/.sep-->
 
 
@@ -269,8 +224,7 @@
       <div class="container">
         <div class="row centered">
           <div class="col-md-8 col-md-offset-2">
-            <a href="https://github.com/winniemlau" target="_blank"><i class="ion-social-github"></i></a>
-            <a href="https://www.linkedin.com/in/winniemlau" target="_blank"><i class="ion-social-linkedin"></i></a>
+                <p>&copy; Copyright 2016 Winnie Lau. All Rights Reserved.</p>
           </div><!--/col-md-8-->
         </div>
       </div><!--/container-->
