--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
           <img src="assets/img/portfolio/portfolio_09.jpg" class="img-responsive" alt="">
             <div class="he-view">
               <div class="bg a0" data-animate="fadeIn">
-                <h3 class="a1" data-animate="fadeInDown">Budget App</h3>
-                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_09.jpg"  class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
-                <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i></a>
+                <h3 class="a1" data-animate="fadeInDown">Budget App</h3><br/><p> COMING SOON!</p>
+                <!-- <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_09.jpg"  class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
+                <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i></a> -->
                </div><!-- he bg -->
             </div><!-- he view -->
           </div><!-- he wrap -->
@@ -80,11 +80,11 @@
 
         <div class="portfolio-item web-design">
           <div class="he-wrap tpl6">
-          <img src="assets/img/portfolio/portfolio_02.jpg" class="img-responsive" alt="">
+          <img src="assets/img/portfolio/portfolio_02.jpg" class="img-responsive" alt="Burger Logger">
             <div class="he-view">
               <div class="bg a0" data-animate="fadeIn">
                 <h3 class="a1" data-animate="fadeInDown">Burger Logger</h3>
-                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_02.jpg" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
+                <a data-rel="prettyPhoto" href="assets/img/portfolio/22.png" class="dmbutton a2" data-animate="fadeInUp" title="A Pacman styled burger logger with a homemade ORM, MySQL, Node, Express, handlebars using the MVC design pattern."><i class="ion-search"></i></a>
                 <a href="https://github.com/winniemlau/Eat-Da-Burger" target="_blank" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i></a>
               </div><!-- he bg -->
             </div><!-- he view -->
@@ -97,7 +97,7 @@
             <div class="he-view">
               <div class="bg a0" data-animate="fadeIn">
                 <h3 class="a1" data-animate="fadeInDown">Train Scheduler</h3>
-                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_03.jpg" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
+                <a data-rel="prettyPhoto" href="assets/img/portfolio/32.png" class="dmbutton a2" data-animate="fadeInUp" title="A Firebase backed train schedule application."><i class="ion-search"></i></a>
                 <a href="https://github.com/winniemlau/trainSchedule" target="_blank" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i></a>
               </div><!-- he bg -->
             </div><!-- he view -->
@@ -110,7 +110,7 @@
             <div class="he-view">
               <div class="bg a0" data-animate="fadeIn">
                 <h3 class="a1" data-animate="fadeInDown">Collect Crystals</h3>
-                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_04.jpg" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
+                <a data-rel="prettyPhoto" href="assets/img/portfolio/42.png" class="dmbutton a2" data-animate="fadeInUp" title="An interactive guessing game using crystals disguised as numbers."><i class="ion-search"></i></a>
                 <a href="https://github.com/winniemlau/crystalsCollector" target="_blank" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i></a>
               </div><!-- he bg -->
             </div><!-- he view -->
@@ -119,11 +119,11 @@
 
         <div class="portfolio-item books">
           <div class="he-wrap tpl6">
-          <img src="assets/img/portfolio/portfolio_05.jpg" class="img-responsive" alt="">
+          <img src="assets/img/portfolio/portfolio_05.jpg" class="img-responsive" alt="Pokemon Hangman">
             <div class="he-view">
               <div class="bg a0" data-animate="fadeIn">
                 <h3 class="a1" data-animate="fadeInDown">Pokemon Hangman</h3>
-                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_05.jpg" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
+                <a data-rel="prettyPhoto" href="assets/img/portfolio/55.png" class="dmbutton a2" data-animate="fadeInUp" title="A fun and interactive Pokemon styled hangman game in the browser built with HTML, CSS and JavaScript."><i class="ion-search"></i></a>
                 <a href="https://github.com/winniemlau/pokemonHangman" target="_blank" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i></a>
               </div><!-- he bg -->
             </div><!-- he view -->
@@ -136,7 +136,7 @@
             <div class="he-view">
               <div class="bg a0" data-animate="fadeIn">
                 <h3 class="a1" data-animate="fadeInDown">Educational Video<br>Center</h3>
-                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_06.jpg" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
+                <a data-rel="prettyPhoto" href="assets/img/portfolio/62.png" class="dmbutton a2" data-animate="fadeInUp" title="Transferred organizational website from Drupal to WordPress and added customizations by applying HTML, CSS, and PHP skills."><i class="ion-search"></i></a>
                 <a href="http://evc.org/" target="_blank" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i></a>
                </div><!-- he bg -->
             </div><!-- he view -->
@@ -149,7 +149,7 @@
             <div class="he-view">
               <div class="bg a0" data-animate="fadeIn">
                 <h3 class="a1" data-animate="fadeInDown">Arab American<br>Association of NY</h3>
-                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_07.jpg" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
+                <a data-rel="prettyPhoto" href="assets/img/portfolio/72.png" class="dmbutton a2" data-animate="fadeInUp" title="Upgraded organizational website on Squarespace (with personal injections using HTML and CSS) in order to support staff’s request for an user friendly platform."><i class="ion-search"></i></a>
                 <a href="http://arabamericanny.org/" target="_blank" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i></a>
               </div><!-- he bg -->
             </div><!-- he view -->
@@ -162,7 +162,7 @@
             <div class="he-view">
               <div class="bg a0" data-animate="fadeIn">
                 <h3 class="a1" data-animate="fadeInDown">Benefit Journal</h3>
-                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_08.jpg" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
+                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_08.jpg" class="dmbutton a2" data-animate="fadeInUp" title="The Educational Video Center held an annual benefit fundraiser at the Film Society of Lincoln Center. I created all marketing materials -- save the date, formal invitation, 28-page journal, and e-newsletter template using Adobe Photoshop and InDesign. The materials were disseminated to over 300+ guests."><i class="ion-search"></i></a>
               </div><!-- he bg -->
             </div><!-- he view -->
           </div><!-- he wrap -->
@@ -174,7 +174,7 @@
             <div class="he-view">
               <div class="bg a0" data-animate="fadeIn">
                 <h3 class="a1" data-animate="fadeInDown">Volunteer Brochure</h3>
-                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_01.jpg" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
+                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_01.jpg" class="dmbutton a2" data-animate="fadeInUp" title="As the Arab American Association of New York's former Youth Services Coordinator, I was responsible for the recruitment of volunteers as well as the facilitation of the organization's after-school tutoring program, Kitaab Club. As an effort to engage and orient volunteers, I created a volunteer brochure along with a tutors guide using Adobe Photoshop and Indesign."><i class="ion-search"></i></a>
               </div><!-- he bg -->
             </div><!-- he view -->
           </div><!-- he wrap -->
@@ -186,7 +186,7 @@
             <div class="he-view">
               <div class="bg a0" data-animate="fadeIn">
                 <h3 class="a1" data-animate="fadeInDown">Interactive Timeline</h3>
-                <a data-rel="prettyPhoto" href="assets/img/portfolio/portfolio_10.jpg" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-search"></i></a>
+                <a data-rel="prettyPhoto" href="assets/img/portfolio/102.png" class="dmbutton a2" data-animate="fadeInUp" title="As a part of the Educational Video Center's 30th anniversary marketing campaign, I created an interactive timeline that features the works and legacy of the organization using an open-source tool, TimelineJS and added customizations using HTML and CSS."><i class="ion-search"></i></a>
                 <a href="http://evc.org/mission-history/" target="_blank" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i></a>
               </div><!-- he bg -->
             </div><!-- he view -->
@@ -210,7 +210,7 @@
       <div class="container">
         <div class="row centered">
           <div class="col-md-8 col-md-offset-2">
-            <h3><strong>Winnie Lau. Developer & Designer. NY & NJ</strong></h3><br/>
+            <h3><strong>Winnie Lau. Developer & Designer. NY & NJ</strong></h3><br/><br/>
               <a href="https://www.linkedin.com/in/winniemlau" target="_blank" class="btn btn-conf btn-clear"><i class="fa fa-linkedin fa-fw" id="linkedin"></i> <span class="network-name">Linkedin</span></a>
               <a href="https://github.com/winniemlau" target="_blank" class="btn btn-conf btn-clear"><i class="fa fa-github fa-fw" id="github""></i> <span class="network-name">Github</span></a>
               <a href="mailto:hello@winniemlau.com" target="_blank" class="btn btn-conf btn-clear"><i class="fa fa-envelope fa-fw" id="email"></i> <span class="network-name">Email</span></a>
