--- a/index.html
+++ b/index.html
@@ -27,19 +27,21 @@
 
     <div id="h">
       <div class="logo">
-        <h2>WINNIE LAU</h2>
       </div><!--/logo-->
       <div class="container centered">
         <div class="row">
           <div class="col-md-8 col-md-offset-2">
-            <h1 class="h-monster h-thin highlight">Hi, I'm Winnie, and I'm a <br> <span class="element"></span></h1>
+            <!-- <center><img class="img-responsive" src="assets/img/logo.png" width="100px" alt="Logo"></center> -->
+            <h1 class="h-monster h-thin highlight" id="intro">Hi, I'm Winnie, and I'm a <br> <span class="element"></span></h1>
+          <br/>
+          <a href="#intro-body"><i class="fa fa-angle-down" id="scroll" aria-hidden="true"></i></a>
           </div>
         </div><!--/row-->
         </div><!--/row-->
       </div><!--/container-->
     </div><!--H-->
 
-    <div class="container ptb">
+    <div class="container ptb" id="intro-body">
       <div class="row">
         <center><img class="img-responsive" src="assets/img/profilepic.png" width="150px" alt="Profile Pic"></center><br>
         <h2 class="centered mb"><strong>I build functional and interactive websites <br>from concept, navigation and programming.</strong></br></h2>
