--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <div class="bg a0" data-animate="fadeIn">
                 <h3 class="a1" data-animate="fadeInDown">Budget with Me</h3>
                 <a data-rel="prettyPhoto" href="assets/img/portfolio/12.png"  class="dmbutton a2" data-animate="fadeInUp" title="A personal budget web app that helps organize and manage your recurring income and expenses. Built with Meteor JS."><i class="ion-search"></i></a>
-                <a href="single-project.html" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i></a>
+                <a href="https://github.com/winniemlau/bwmApp" target="_blank" class="dmbutton a2" data-animate="fadeInUp"><i class="ion-link"></i></a>
                </div><!-- he bg -->
             </div><!-- he view -->
           </div><!-- he wrap -->
